--- a/src/settings.json
+++ b/src/settings.json
@@ -1,5 +1,7 @@
 {
     "inn":3800020344,
     "short_name":"ООО Ромашка",
-    "is_first_start": false
+    "is_first_start": true,
+    "report_mode":"json"
  }
+ 
